--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "Sean Campbell",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^2.3.4",
     "express": "^4.13.3"
   },
   "devDependencies": {
     "babel-core": "^5.8.33",
     "babelify": "^7.0.2",
+    "body-parser": "^1.14.1",
     "browserify": "^12.0.1",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
