--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "race-roster-test",
   "version": "1.0.0",
   "description": "My test for Race Roster interview",
-  "main": "app.js",
+  "main": "bin/www",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node bin/www"
   },
   "author": "Sean Campbell",
   "license": "MIT",
   "dependencies": {
     "ejs": "^2.3.4",
+    "body-parser": "^1.14.1",
     "express": "^4.13.3"
   },
   "devDependencies": {
     "babel-core": "^5.8.33",
     "babelify": "^7.0.2",
-    "body-parser": "^1.14.1",
     "browserify": "^12.0.1",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
@@ -33,5 +33,8 @@
     "jasmine-core": "^2.3.4",
     "jasmine-reporters": "^2.0.7",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "engines": {
+    "node": "4.1.1"
   }
 }
